import UIKit

class FlowViewController: UIViewController {

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .gray

        view.accessibilityIdentifier = "mainScreen"
    }
}
